# comix-viewer

./: .env.example  .tagpr  CHANGELOG.md  Dockerfile  README.md  compose.dev.yaml  compose.yaml  pyproject.toml
.github/: release.yml
.github/scripts/: create-release.js
.github/workflows/: deploy-image.yaml  release.yaml  tagpr.yaml
app/: models.py  server.py  utils.py
app/blueprints/: api.py  web.py
app/static/: index_main.js  index_style.css  read_episode.js  viewer_main.js  viewer_style.css
app/templates/: comic.jinja  episode.jinja  index.jinja
nginx/: nginx.conf
